# realtime-special-crypto

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
app/: main.py  producer.py
app/trade/: main.py
app/worker/: main.py
scripts/: down.sh  shell.sh  start-dev.sh  up.sh
